# project_labs

./: .gitignore
lw1/: ab.cpp  abc.cpp  hello.cpp  hello_err.cpp  linear_equation.cpp  square_equation.cpp
sfml.1/: CMakeLists.txt  Makefile  cmake_install.cmake
sfml.1/00/: Makefile  cmake_install.cmake
sfml.1/01/: Makefile  cmake_install.cmake  main.cpp
sfml.1/02/: Makefile  cmake_install.cmake  main.cpp
sfml.1/03/: Makefile  cmake_install.cmake  main.cpp
sfml.1/04/: Makefile  cmake_install.cmake  main.cpp
sfml.1/05/: Makefile  cmake_install.cmake  main.cpp
sfml.2/: CMakeCache.txt  cmake_install.cmake
sfml.2/00/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sfml.2/01/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml.2/02/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml.2/03/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml.3/: CMakeLists.txt
sfml.3/02/: main.cpp
sfml.3/03/: main.cpp
sfml.3/04/: main.cpp
sfml.3/05/: main.cpp
sfml.3/06/: main.cpp
sfml.3/07/: CMakeLists.txt  main.cpp
workshop.1/: CMakeLists.txt
workshop.1/00/: main.cpp
workshop.1/01/: main.cpp
workshop.1/02/: main.cpp
workshop.1/03/: main.cpp
